# Process this file with automake to produce Makefile.in

fireholconfdir = $(sysconfdir)/firehol
servicesconfdir = $(sysconfdir)/firehol/services

fireholconf_DATA = \
	firehol.conf.example

servicesconf_DATA = \
	bittorrent.conf.example

EXTRA_DIST = \
	firehol.conf.example \
	bittorrent.conf.example
