# Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	firehol.xml \
	firehol-conf.xml \
	firehol-variables.xml \
	def-interface.xml \
	def-router.xml \
	cmd-policy.xml \
	cmd-protection.xml \
	cmd-server.xml \
	cmd-client.xml \
	cmd-group.xml \
	helpconf-version.xml \
	helpconf-action.xml \
	helpconf-blacklist.xml \
	helpconf-classify.xml \
	helpconf-connmark.xml \
	helpconf-dscp.xml \
	helpconf-mac.xml \
	helpconf-mark.xml \
	helpconf-nat.xml \
	helpconf-proxy.xml \
	helpconf-tos.xml \
	helpconf-tosfix.xml \
	helpcmd-iptables.xml \
	helpcmd-masquerade.xml \
	helpcmd-tcpmss.xml \
	rule-params.xml \
	actions.xml \
	services.xml
