# Process this file with automake to produce Makefile.in
# This Makefile is meant to be call by the parent directory Makefile

default:

if MAINTAINER_MODE

manpages:
	$(XSLTPROC) $(manpages_XSLTPROC_FLAGS) manpages.xsl $(FIREHOLMANUALXML_MASTER)

endif

EXTRA_DIST =

CLEANFILES =

DISTCLEANFILES =

MAINTAINERCLEANFILES =
